--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>products</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <div>
         <p>this is product store</p>
         {% if products %}
         <p>allproduct here</p>
         {% else %}
         <p>no produt to display</p>
-          
+        
         {% endif %}
     </div>
-    
-</body>
-</html>
+  
+{% endblock content %}
+
