--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -5,6 +5,7 @@
     {% tailwind_css %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>{{title_variable}}</title>
 </head>
 <body>
