--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <body>
-        <nav class="w-screen bg-[#5a5948] h-fit overflow-hidden">
+        <nav class="w-full overflow-x-hidden bg-[#5a5948] h-fit  overflow-hidden sticky top-0 left-0 z-10">
             <div class="py-10 lg:px-8 px-4 max-w-[1280px] h-16 m-auto text-white flex items-center justify-between">
                 <div>
                     <img class=" h-[50px] lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold" src='{% static "images/Logo.png" %}' alt="logo">
@@ -23,7 +23,7 @@
                 </div>
                 <div id="hamburger" class="fa fa-bars flex items-center text-xl" style="display:none;"></div>
                 <div id="mobileNav"
-                    class="fixed flex flex-col gap-8 pt-16 px-4 text-xl uppercase bg-teal-500 h-full inset-0 top-16 w-[70%] left-[-70%] ease-in-out duration-500 cursor-pointer">
+                    class="fixed z-10 flex flex-col gap-8 pt-16 px-4 text-xl uppercase bg-[#5a5948] h-full inset-0 top-16 w-[70%] left-[-70%] ease-in-out duration-500 cursor-pointer">
                     <span>Services</span>
                     <span>About</span>
                     <span>Contact</span>
