feat(template): Add checkout template

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -21,6 +21,15 @@
     </div>
 
     {% include "footer.html" %}
+    <style>
+        @layer utilities {
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+        }
+    }
+    </style>
     
 </body>
 </html>
