--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="{% static 'js/cart.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
     <title>{{title_variable}}</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
         -webkit-appearance: none;
         margin: 0;
         }
-    }
+    }4
     </style>
     
 </body>
