--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
     <div>
         {% if products %}
@@ -9,7 +8,7 @@
                     {% for product in products  %}
                         <div class="w-full max-w-sm mx-auto rounded-md shadow-md overflow-hidden transform duration-300 hover:scale-105 hover:shadow-lg">
                             <div class="flex items-end justify-end h-56 w-full bg-cover" style="background-image: url('{{product.imageURL}}')">
-                                <button data-product="{{product.id}}" data-action="add" class="p-2 rounded-full  text-white mx-5 -mb-4 bg-[#fbab2b] hover:bg-[rgba(251,171,43,0.6)] focus:outline-none focus:bg:[rgba(251,171,43,0.6)]">
+                                <button data-product="{{product.id}}" data-action="add" class="update-cart p-2 rounded-full  text-white mx-5 -mb-4 bg-[#fbab2b] hover:bg-[rgba(251,171,43,0.6)] focus:outline-none focus:bg:[rgba(251,171,43,0.6)]">
                                     <svg class="h-5 w-5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                                 </button>
                             </div>
