feat(javascript):check user is authentcated

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -29,8 +29,12 @@
         -webkit-appearance: none;
         margin: 0;
         }
-    }4
+    }
     </style>
+    <script>
+     var user = '{{request.user}}'
+
+    </script>
     
 </body>
 </html>
