--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -7,51 +7,56 @@
         <div class=" pt-20">
         <h1 class="mb-10 text-center text-2xl font-bold">Cart Items</h1>
         {% if items %}
-        <div class="mx-auto max-w-5xl justify-center px-6 md:flex md:space-x-6 xl:px-0">
-            {% for item in items %}
-                <div class="rounded-lg md:w-2/3"> 
-                    <div class="justify-between mb-6 rounded-lg bg-white p-6 shadow-md sm:flex sm:justify-start">
-                        <img src="{{item.product.imageURL}}" alt="product-image" class="w-full rounded-lg sm:w-40" />
-                        <div class="sm:ml-4 sm:flex sm:w-full sm:justify-between">
-                        <div class="mt-5 sm:mt-0">
-                            <h2 class="text-lg font-bold text-gray-900">{{item.product.name}}</h2>
-                            <p class="mt-1 text-xs text-gray-700">{{item.product.price|floatformat:2}}</p>
-                        </div>
-                        <div class="mt-4 flex justify-between im sm:space-y-6 sm:mt-0 sm:block sm:space-x-6">
-                            <div class="flex items-center border-gray-100">
-                            <span data-product="{{item.product.id}}" data-action="remove" class="cursor-pointer rounded-l bg-gray-100 py-1 px-3.5 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> - </span>
-                            <input class="h-8 w-8 border bg-white text-center text-xs outline-none" type="number" value="{{item.quantity}}" min="1" />
-                            <span data-product="{{item.product.id}}" data-action="add" class="cursor-pointer rounded-r bg-gray-100 py-1 px-3 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> + </span>
-                            </div>
-                            <div class="flex items-center space-x-4">
-                            <p class="text-sm">{{item.product.price|floatformat:2}}</p>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 cursor-pointer duration-150 hover:text-[#fbab2b]">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                            </svg>
+        <div class=" justify-center grid grid-cols-3  md:px-[60px] gap-10 ">
+            <div class=" flex flex-col col-span-2 ">
+                {% for item in items %}
+                    <div class=" rounded-lg mb-6 bg-white p-6 shadow-md flex items-center justify-between ">
+                        <div class="flex justify-center items-center  gap-4">
+                            <img src="{{item.product.imageURL}}" alt="product-image" class="w-full rounded-lg sm:w-40" />
+                            <div class="mt-5 sm:mt-0">
+                                <h2 class="text-lg font-bold text-gray-900">{{item.product.name}}</h2>
+                                <p class="mt-1 text-xs text-gray-700">{{item.product.price|floatformat:2}}</p>
                             </div>
                         </div>
+                        <div class="flex flex-col justify-center items-end gap-3">
+                                <div class="flex items-center border-gray-100">
+                                <span data-product="{{item.product.id}}" data-action="remove" class="cursor-pointer rounded-l bg-gray-100 py-1 px-3.5 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> - </span>
+                                <input class="h-8 w-8 border bg-white text-center text-xs outline-none" type="number" value="{{item.quantity}}" min="1" />
+                                <span data-product="{{item.product.id}}" data-action="add" class="cursor-pointer rounded-r bg-gray-100 py-1 px-3 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> + </span>
+                                </div>
+                                <div class="flex items-center space-x-4">
+                                <p class="text-sm">${{item.product.price|floatformat:2}}</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 cursor-pointer duration-150 hover:text-[#fbab2b]">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                                </svg>
+                                </div>
                         </div>
                     </div>
-                </div>
               
             {% endfor %}
+            </div>
+
 
             <!-- Sub total -->
-            <div class="mt-6 h-full rounded-lg border bg-white p-6 shadow-md md:mt-0 md:w-1/3">
-                <div class="mb-2 flex justify-between">
-                    <p class="text-gray-700">Items:</p>
-                    <p class="text-gray-700">{{order.get_cart_items}}</p>
-                </div>
-
-                <hr class="my-4" />
-                <div class="flex justify-between">
-                    <p class="text-lg font-bold">Total</p>
-                    <div class="">
-                    <p class="mb-1 text-lg font-bold">$ ${{order.get_cart_total|floatformat:2}} USD</p>
-                    <p class="text-sm text-gray-700">including VAT</p>
+            <div class="h-full    col-span-1 ">
+                <div class=" bg-white p-6 shadow-md rounded-lg">
+                    <div class="mb-2 flex justify-between">
+                        <p class="text-gray-700">Items:</p>
+                        <p class="text-gray-700">{{order.get_cart_items}}</p>
                     </div>
+    
+                    <hr class="my-4" />
+                    <div class="flex justify-between">
+                        <p class="text-lg font-bold">Total</p>
+                        <div class="">
+                        <p class="mb-1 text-lg font-bold"> ${{order.get_cart_total|floatformat:2}} USD</p>
+                        <p class="text-sm text-gray-700">including VAT</p>
+                        </div>
+                    </div>
+                    <a href="{% url 'checkout' %}" class="mt-6 w-full rounded-md bg-[#fbab2b] py-1.5 font-medium text-blue-50 hover:bg-[rgba(251,171,43,0.7)]">Check out</a>
+                
+
                 </div>
-                <a href="{% url 'checkout' %}" class="mt-6 w-full rounded-md bg-[#fbab2b] py-1.5 font-medium text-blue-50 hover:bg-[rgba(251,171,43,0.7)]">Check out</a>
             </div>
         </div>
 
