--- a/store/templates/Home.html
+++ b/store/templates/Home.html
@@ -8,7 +8,8 @@
                 <div class="2xl:mx-auto 2xl:container py-12  w-full">
                   <div class="flex flex-col jusitfy-center items-center space-y-10">
                     <div class="flex flex-col justify-center items-center ">
-                      <h1 class="text-3xl xl:text-4xl font-semibold leading-7 xl:leading-9  dark:text-white">Shop By Category</h1>
+                      
+                      <h1 class="text-3xl xl:text-4xl font-semibold leading-7 xl:leading-9 text-black">Shop By Category</h1>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:gap-x-8 w-full">
                       <div class="relative group flex justify-center items-center h-full w-full transform duration-300 hover:scale-105 hover:shadow-lg">
