--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -53,7 +53,9 @@
                         <p class="text-sm text-gray-700">including VAT</p>
                         </div>
                     </div>
-                    <a href="{% url 'checkout' %}" class="mt-6 w-full rounded-md bg-[#fbab2b] py-1.5 font-medium text-blue-50 hover:bg-[rgba(251,171,43,0.7)]">Check out</a>
+                    <a href="{% url 'checkout' %}" class="inline-block text-white font-bold py-2 px-4 mt-[20px] rounded-2xl bg-gradient-to-r from-[#fbab2b] to-[rgba(251,171,43,0.7)] border border-transparent transform hover:scale-110 hover:border-white transition-transform duration-3000 ease-in-out">
+                        Check out
+                    </a>
                 
 
                 </div>
