--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -20,9 +20,9 @@
                         </div>
                         <div class="flex flex-col justify-center items-end gap-3">
                                 <div class="flex items-center border-gray-100">
-                                <span data-product="{{item.product.id}}" data-action="remove" class="cursor-pointer rounded-l bg-gray-100 py-1 px-3.5 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> - </span>
-                                <input class="h-8 w-8 border bg-white text-center text-xs outline-none" type="number" value="{{item.quantity}}" min="1" />
-                                <span data-product="{{item.product.id}}" data-action="add" class="cursor-pointer rounded-r bg-gray-100 py-1 px-3 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> + </span>
+                                <span data-product="{{item.product.id}}" data-action="remove" class="update-cart cursor-pointer rounded-l bg-gray-100 py-1 px-3.5 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> - </span>
+                                <span class="py-[7px] px-3 border bg-white text-center text-xs outline-none">{{item.quantity}}</span>
+                                <span data-product="{{item.product.id}}" data-action="add" class="update-cart cursor-pointer rounded-r bg-gray-100 py-1 px-3 duration-100 hover:bg-[#fbab2b] hover:text-blue-50"> + </span>
                                 </div>
                                 <div class="flex items-center space-x-4">
                                 <p class="text-sm">${{item.product.price|floatformat:2}}</p>
