--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% block content %}
-<div class="flex items-end w-full min-h-screen bg-white">
+<div class="flex items-end w-full mt-[200px] min-h-full bg-white">
 
     <footer class="w-full text-gray-700 bg-gray-100 body-font">
         <div
