feat:add admin dashboard and routes

--- a/store/templates/Home.html
+++ b/store/templates/Home.html
@@ -13,7 +13,7 @@
                             <div class='max-w-[1700px] w-full mx-auto '>
                               <div class=' space-y-6 flex justify-end '>
                       
-                                  <a target='_blank' href="{% url 'dashboard' %}" class='group font-medium tracking-wide select-none text-base relative inline-flex items-center justify-center cursor-pointer h-12 border-2 border-solid py-0 px-6 rounded-md overflow-hidden z-10 transition-all duration-300 ease-in-out outline-0 bg-[#fbab2b] text-white border-[#fbab2b] hover:text-[#fbab2b] focus:text-[#fbab2b]'>
+                                  <a  href="{% url 'dashboard' %}" class='group font-medium tracking-wide select-none text-base relative inline-flex items-center justify-center cursor-pointer h-12 border-2 border-solid py-0 px-6 rounded-md overflow-hidden z-10 transition-all duration-300 ease-in-out outline-0 bg-[#fbab2b] text-white border-[#fbab2b] hover:text-[#fbab2b] focus:text-[#fbab2b]'>
                                       <strong class='font-medium uppercase'>orders</strong>
                                       <svg class="ml-1 rotate-180 fill-white group-hover:fill-[#fbab2b]" width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <path opacity="0.4"
