feat: add categories on home template

--- a/store/templates/Home.html
+++ b/store/templates/Home.html
@@ -36,28 +36,28 @@
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:gap-x-8 w-full">
                       <div class="relative group flex justify-center items-center h-full w-full transform duration-300 hover:scale-105 hover:shadow-lg">
-                        <img class="object-center object-cover h-full w-full" src='{% static "images/perfume.jpg" %}' alt="perfume" />
-                        <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">Perfume</button>
+                        <img class="object-center object-cover h-full w-full" src='{{dept0_image_url }}' alt="perfume" />
+                        <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">{{dept0_name }}</button>
                         <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-20 w-36 bg-white bg-opacity-50"></div>
                       </div>
               
                       <div class="flex flex-col space-y-4 md:space-y-8 mt-4 md:mt-0 ">
                         <div class="relative group flex justify-center items-center h-full w-full transform duration-300 hover:scale-105 hover:shadow-lg">
-                          <img class="object-center object-cover h-full w-full" src='{% static "images/shoes2.jpg" %}' alt="shoe-image" />
-                          <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">Shoes</button>
+                          <img class="object-center object-cover h-full w-full" src='{{dept1_image_url }}' alt="shoe-image" />
+                          <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">{{dept1_name }}</button>
                           <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-20 w-36 bg-white bg-opacity-50"></div>
                         </div>
                         <div class="relative group flex justify-center items-center h-full w-full transform duration-300 hover:scale-105 hover:shadow-lg">
-                          <img class="object-center object-cover h-full w-full" src="https://i.ibb.co/Hd1pVxW/louis-mornaud-Ju-6-TPKXd-Bs-unsplash-1-2.png" alt="watch-image" />
-                          <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">Watches</button>
+                          <img class="object-center object-cover h-full w-full" src="{{dept2_image_url }}" alt="watch-image" />
+                          <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">{{dept2_name }}</button>
                           <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-20 w-36 bg-white bg-opacity-50"></div>
                         </div>
                       </div>
               
                       <div class="relative group justify-center items-center h-full w-full hidden lg:flex transform duration-300 hover:scale-105 hover:shadow-lg">
-                        <img class="object-center object-cover h-full w-full" src="https://i.ibb.co/PTtRBLL/olive-tatiane-Im-Ez-F9-B91-Mk-unsplash-1.png" alt="girl-image" />
-                        <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36">Accessories</button>
-                        <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-20 w-36 bg-white bg-opacity-50"></div>
+                        <img class="object-center object-cover h-full w-full" src="{{dept3_image_url }}" alt="girl-image" />
+                        <button class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  p-3 w-46">{{dept3_name }}</button>
+                        <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-[108px] w-46 bg-white bg-opacity-50"></div>
                       </div>
                       <div class="relative group flex justify-center items-center h-full w-full mt-4 md:hidden md:mt-8 lg:hidden transform duration-300 hover:scale-105 hover:shadow-lg">
                         <img class="object-center object-cover h-full w-full hidden md:block" src="https://i.ibb.co/6FjW19n/olive-tatiane-Im-Ez-F9-B91-Mk-unsplash-2.png" alt="girl-image" />
