--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <body>
-        <nav class="w-full overflow-x-hidden bg-[#5a5948] h-fit  overflow-hidden sticky top-0 left-0 z-10">
+        <nav class="w-full overflow-x-hidden bg-[#5a5948] h-fit  overflow-hidden sticky top-0 left-0 z-20">
             <div class="py-10 lg:px-8 px-4 max-w-[1280px] h-16 m-auto text-white flex items-center justify-between">
                 <div class=" flex justify-center items-center">
-                    <a href="{% url 'store' %}">
+                    <a href="{% url 'home' %}">
                         <img href="" class=" h-[50px] lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold" src='{% static "images/Logo.png" %}' alt="logo">
                     </a>
                 </div>
