--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -63,9 +63,17 @@
         </div>
 
         {% else %}
-        <div>
-            <p>oops there is no item</p>
-        </div>
+
+        <div class="flex  items-center justify-center ">
+            <div class="rounded-lg bg-gray-50 px-16 py-14">
+              <div class="flex justify-center">
+
+              </div>
+              <h3 class="my-4 text-center text-3xl font-semibold text-gray-700 ">Oops!!!</h3>
+              <p class="w-[230px] text-center font-normal text-gray-600 uppercase">there is no item added</p>
+              <a href="{% url 'store' %}" class="mx-auto mt-10 block rounded-xl border-4 border-transparent bg-[#fbab2b] px-6 py-3 text-center text-base font-medium text-orange-100 outline-8 hover:outline hover:duration-300 uppercase">add here</a>
+            </div>
+          </div>
           
         {% endif %}
 
