--- a/store/templates/dashboard.html
+++ b/store/templates/dashboard.html
@@ -45,7 +45,7 @@
                             </td>
                             <td class="py-3 px-6 text-center">
                                 {% if order.order_status == 'fulfilled' %}
-                                    <span class="bg-purple-200 text-purple-600 py-1 px-3 rounded-full text-xs">{{ order.order_status }}</span>
+                                    <span class="bg-[rgba(251,171,43,0.2)] text-[rgba(251,171,43,)] py-1 px-3 rounded-full text-xs">{{ order.order_status }}</span>
                                 {% elif order.order_status == 'completed' %}
                                  <span class="bg-green-200 text-green-900 py-1 px-3 rounded-full text-xs">{{ order.order_status }}</span>
 
@@ -53,7 +53,7 @@
                             </td>
                             <td class="py-3 px-6 text-center">
                                 <div class="flex item-center justify-center">
-                                    <div class="w-4 mr-2 transform hover:text-purple-500 hover:scale-110">
+                                    <div class="w-4 mr-2 transform hover:text-[#fbab2b] hover:scale-110">
                                         <a href="{% url 'orderdetail' order.id %}">
                                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -62,7 +62,7 @@
                                         </a>
 
                                     </div>
-                                    <div class="w-4 mr-2 transform hover:text-purple-500 hover:scale-110">
+                                    <div class="w-4 mr-2 transform hover:text-[#fbab2b] hover:scale-110">
                                         <a href="{% url 'orderdetail' order.id %}">
                                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
