--- a/store/templates/men_women.html
+++ b/store/templates/men_women.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
+
 {% block content %}
+<div>
     <div>
         {% if products %}
             <div class="mt-16 px-4 sm:px-6 xl:px-20 2xl:px-0 overflow-hidden">
@@ -12,7 +15,7 @@
                                     <svg class="h-5 w-5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                                 </button>
                             </div>
-                            <div class="flex justify-between items-center pt-6">
+                            <div class=" flex justify-between items-center pt-6">
                                 <h3 class="text-gray-700 uppercase">{{product.name}}</h3>
                                 <span class="text-gray-500 mt-2">{{product.price}}</span>
                             </div>
@@ -60,6 +63,6 @@
         
         {% endif %}
     </div>
+</div>
   
 {% endblock content %}
-
