--- a/store/templates/orderdetail.html
+++ b/store/templates/orderdetail.html
@@ -7,8 +7,8 @@
         <div class=" pt-20">
         <h1 class="mb-10 text-center text-2xl font-bold uppercase">ordered Items</h1>
         {% if items %}
-        <div class=" justify-center grid grid-cols-3  md:px-[60px] gap-10 ">
-            <div class=" flex flex-col col-span-2 ">
+        <div class=" justify-center grid sm:grid-cols-3  sm:px-[60px] gap-10 ">
+            <div class=" flex flex-col sm:col-span-2 ">
                 {% for item in items %}
                     <div class=" rounded-lg mb-6 bg-white p-6 shadow-md flex items-center justify-between ">
                         <div class="flex justify-center items-center  gap-4">
@@ -34,7 +34,7 @@
 
 
             <!-- Sub total -->
-            <div class="h-full    col-span-1 ">
+            <div class="h-full    sm:col-span-1 ">
                 <div class=" bg-white p-6 shadow-md rounded-lg">
                     <div class="mb-2 flex justify-between">
                         <p class="text-gray-700">customer:</p>
@@ -62,10 +62,7 @@
                         <p class="text-sm text-gray-700">including VAT</p>
                         </div>
                     </div>
-                    <a href="#" class="inline-block text-white font-bold py-2 px-4 mt-[20px] rounded-2xl bg-gradient-to-r from-[#fbab2b] to-[rgba(251,171,43,0.7)] border border-transparent transform hover:scale-110 hover:border-white transition-transform duration-3000 ease-in-out">
-                        Complete
-                    </a>
-                
+                    <a href="#" class="mx-auto mt-10 block rounded-xl border-4 border-transparent bg-[#fbab2b] px-3 py-3 text-center text-base font-medium text-orange-100 outline-8 hover:outline hover:duration-300 uppercase">Complete</a>
 
                 </div>
             </div>
